# achievements-bot

./: .gitignore  README.md  pyproject.toml
achievements_bot/: __main__.py  config.py.example  db.py  db.sql  migration.py  templates.py
achievements_bot/handlers/: __init__.py  all_messages.py  get_stats.py  get_user_stats.py  help.py  start.py
achievements_bot/migrations/: 01_users.sql  02_rate_history.sql  03_users_update.sql  04_rate_history_update.sql
achievements_bot/services/: cls.py  logger.py  points_rate.py  rate_history.py  user.py
achievements_bot/templates/: get_stats.j2  get_user_stats.j2  help.j2  start.j2
achievements_bot/tests/: test_classify_points_message.py
